[project]
name = "simplebc"
version = "0.1.0"
description = "Uma biblioteca simples de blockchain"
authors = [{ name="Amaury", email="amaury2941@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
